--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - x-traordinary.ai Bootstrap Template</title>
+  <title>x-traordinary.ai</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -122,7 +122,7 @@
           <li><i class="bi bi-check-circle"></i> <span>Custom AI solutions tailored to your unique business challenges.</span></li>
           <li><i class="bi bi-check-circle"></i> <span>Data-driven insights and predictive analytics to optimize performance.</span></li>
         </ul>
-        <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+        <a href="#contact" class="read-more"><span>Contact Us</span><i class="bi bi-arrow-right"></i></a>
       </div>
 
     </div>
@@ -749,7 +749,7 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">X-Traordinary Development LLC</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="https://x-traordinarydevelopment.com/">X-Traordinary Development</a>
+        Designed by <a style="color: #d4af37;" href="https://x-traordinarydevelopment.com/">X-Traordinary Development</a>
       </div>
     </div>
 
@@ -773,6 +773,43 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $(".php-email-form").on("submit", function (e) {
+      e.preventDefault();
+
+      let form = $(this);
+      let formData = form.serialize();
+
+      $.ajax({
+        type: "POST",
+        url: "forms/contact.php",
+        data: formData,
+        beforeSend: function () {
+          $(".loading").show();
+          $(".error-message").hide();
+          $(".sent-message").hide();
+        },
+        success: function (response) {
+          $(".loading").hide();
+          if (response === "success") {
+            $(".sent-message").show();
+            form.trigger("reset");
+          } else {
+            $(".error-message").text(response).show();
+          }
+        },
+        error: function () {
+          $(".loading").hide();
+          $(".error-message").text("Something went wrong. Please try again.").show();
+        }
+      });
+    });
+  });
+</script>
+
 
 </body>
 
